add sort persistance

--- a/templates/index.html
+++ b/templates/index.html
@@ -519,6 +519,7 @@
                         }
                     ],
                     order: [[2, 'asc']],
+                    stateSave: true,
                     pagingType: 'simple_numbers',
                     dom: '<"row p-3 align-items-center"<"col-md-6"f><"col-md-6 text-end"l>><"row"<"col-12"t>><"row p-3 align-items-center"<"col-md-6"i><"col-md-6"p>>',
                     pageLength: 25
